Added more UI elements

--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+/*
+COLOUR THEME
+
+#96B3D9;
+#D5E7F2;
+#C9EBF2;
+#0B2624;
+#7EBFB3
+
+*/
+
 * {
     border: 1px solid black;
     box-sizing: border-box;
@@ -10,24 +21,28 @@ body,html {
 
 body {
     display: grid;
-    grid-template-columns: 250px auto;
+    grid-template-columns: 400px auto;
+    font-family: sans-serif;
 }
 
 .sidebar {
-    height: 100vh;
-    padding-left: 20px;
-    padding-right: 20px;
+    height: 100%;
+    padding: 20px;
     display: flex;
     flex-direction: column;
+    background-color: #0B2624;
+    color: white;
 }
 
 .header {
     width: auto;
     padding: 20px;
-    height: 200px;
+    height: auto;
     display: grid;
     grid-template-columns: 1fr auto;
     align-items: center;
+    background-color: #9bc9c9;
+    color: white;
 }
 
 .welcome-message {
@@ -38,6 +53,7 @@ body {
     width: 90px;
     height: 40px;
     border-radius: 25px;
+    font-weight: bold;
 }
 
 .bottom-nav {
@@ -49,13 +65,115 @@ body {
     margin: 10px;
 }
 
-.main-body {
-    padding: 20px;
+.search-bar {
+    display: flex;
+}
 
+button:hover {
+    background-color: #d8e6e9;
+    cursor: pointer;
+}
+
+.greendale-logo {
+    width: 15%;
+    filter: invert();
+}
+
+.card-container {
+    width: 79%;
+    height: 75%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: 1fr 1fr;
+    justify-items: start;
+    gap: 50px;
+}
+
+.card {
+    width: 300px;
+    height: 250px;
+    border: 1px solid lightgrey;
+    border-radius: 15px;
+    padding: 15px;
+}
+
+.main-body {
+    padding: 40px;
 }
 
 input {
     border-radius: 20px;
+    border: none;
+    height: 30px;
 }
+
+input:focus {
+    border: 1px solid rgb(212, 212, 212);
+}
+
+.welcome-message {
+    font-size: 1.5rem;
+    padding: 0;
+    display:grid;
+    grid-template-columns: 125px auto;
+}
+
+#welcome-back-message {
+    font-size: 1rem;
+}
+
+#magnifying-glass {
+    width: 20px;
+    opacity: 25%;
+    margin-right: 15px;
+}
+
+.profile-pic {
+    align-self: center;
+    padding-top: 30px;
+}
+
+.profile-pic img {
+    width: 70px;
+    margin: 15px;
+    border-radius: 100px;
+}
+
+.profile-pic img:hover {
+    width: 75px;
+    cursor: pointer;
+}
+
+.notifications {
+    display: flex;
+    justify-content: end;
+}
+
+.notifications img {
+    width: 8%;
+    filter: invert();
+    transition: 1s ease;
+}
+
+.notifications img:hover {
+    cursor: pointer;
+    filter: brightness(20%);
+}
+
+.card {
+    display: grid;
+    grid-template-columns: 10px auto;
+    padding: 10px;
+}
+
+.side-tab {
+    width: 100%;
+    height: 100%;
+}
+
+.card-content {
+    background-color: white;
+}
+
 
 
