--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@ COLOUR THEME
 
 */
 
+
 body,html {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
+    background: rgb(240, 236, 236);
 }
 
 body {
@@ -39,6 +41,7 @@ body {
     align-items: center;
     background-color: #9bc9c9;
     color: white;
+    filter: drop-shadow(0 10px 5px rgba(0,0,0,0.2));
 }
 
 .welcome-message {
@@ -73,10 +76,12 @@ button:hover {
 .greendale-logo {
     width: 15%;
     filter: invert();
+    transition: .5s ease;
 }
 
 .greendale-logo:hover {
     cursor: pointer;
+    opacity: 80%;
 }
 
 .section-label {
@@ -89,9 +94,11 @@ button:hover {
     width: 80%;
 }
 
+.section-label h2 {
+    padding-left: 20px;
+}
+
 .card-container {
-    width: 80%;
-    height: 75%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-template-rows: 1fr 1fr;
@@ -119,6 +126,7 @@ button:hover {
 
 .main-body {
     padding: 40px;
+    box-sizing: border-box;
     width: 100%;
 }
 
@@ -193,6 +201,8 @@ input:focus {
     grid-template-columns: 10px auto;
     padding: 10px;
     transition: 0.2s ease;
+    background-color: white;
+    filter: drop-shadow(0 10px 10px rgba(0,0,0,0.2));
 }
 
 .card-text {
@@ -232,7 +242,7 @@ input:focus {
 }
 
 .sidebar-link:hover {
-    padding-left: 2px;
+    padding-left: 3px;
     cursor: pointer;
 }
 
@@ -251,5 +261,36 @@ input:focus {
 .bottom-nav p:hover {
     cursor: pointer;
     color: rgb(236, 230, 230);
+}
+
+.card-and-announcements {
+    display: flex;
+}
+
+.main-body-left {
+    width: 80%;
+}
+
+.main-body-right {
+    width: 20%;
+}
+
+.announcement-pane {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 75%;
+    border-radius: 15px;
+    background: white;
+    filter: drop-shadow(0 10px 10px rgba(0,0,0,0.2));
+}
+
+.announcement:not(:last-child) {
+    border-bottom: 1px solid rgb(173, 173, 173);
+}
+
+.announcement p {
+    font-size: .75rem;
 }
 
