--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ COLOUR THEME
 
 */
 
-
-body,html {
+body,
+html {
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -41,7 +41,7 @@ body {
     align-items: center;
     background-color: #9bc9c9;
     color: white;
-    filter: drop-shadow(0 10px 5px rgba(0,0,0,0.2));
+    filter: drop-shadow(0 10px 5px rgba(0, 0, 0, 0.1));
 }
 
 .welcome-message {
@@ -92,10 +92,6 @@ button:hover {
 
 .section-label h1 {
     width: 80%;
-}
-
-.section-label h2 {
-    padding-left: 20px;
 }
 
 .card-container {
@@ -149,7 +145,7 @@ input:focus {
 .welcome-message {
     font-size: 1.5rem;
     padding: 0;
-    display:grid;
+    display: grid;
     grid-template-columns: 125px auto;
 }
 
@@ -202,7 +198,7 @@ input:focus {
     padding: 10px;
     transition: 0.2s ease;
     background-color: white;
-    filter: drop-shadow(0 10px 10px rgba(0,0,0,0.2));
+    filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.2));
 }
 
 .card-text {
@@ -211,10 +207,10 @@ input:focus {
     font-size: 0.8rem;
 }
 
- .card:hover {
+.card:hover {
     transform: scale(1.02, 1.02);
-    cursor: pointer;
-} 
+    backface-visibility: hidden;
+}
 
 .card-content {
     background-color: white;
@@ -282,8 +278,8 @@ input:focus {
     padding-right: 20px;
     width: 75%;
     border-radius: 15px;
-    background: white;
-    filter: drop-shadow(0 10px 10px rgba(0,0,0,0.2));
+    background-color: white;
+    filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.2));
 }
 
 .announcement:not(:last-child) {
@@ -294,3 +290,52 @@ input:focus {
     font-size: .75rem;
 }
 
+.card-buttons {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.card-buttons img {
+    width: 30px;
+    margin-left: 5px;
+    margin-right: 5px;
+    transition: .75s ease;
+}
+
+.card-buttons img:hover {
+    cursor: pointer;
+    opacity: 80%;
+}
+
+.trending-pane {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 15px;
+    width: 75%;
+    background-color: white;
+    filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.2));
+}
+
+.user-name {
+    padding: 10px;
+    line-height: 2rem;
+    font-size: .75rem
+}
+
+.twitter-username:hover {
+    cursor: pointer;
+}
+
+.user-name:not(:last-child) {
+    border-bottom: 1px solid rgb(238, 233, 233);
+}
+
+.twitter-username {
+    color: #0B2624;
+}
+
+h4 {
+    margin-top: 40px;
+}
